{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1238,
  "lineage": "cd7fa385-5840-4ecf-bc35-6eb1182f016d",
  "resources": [
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:security-group/sg-04b299cccfdea730f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04b299cccfdea730f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090d0b774a242e731"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-eks-cluster-cluster-20230723152705113300000008",
            "name_prefix": "myapp-eks-cluster-cluster-",
            "owner_id": "815919245801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-cluster",
              "environment": "WidBot-task"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-cluster",
              "environment": "WidBot-task"
            },
            "timeouts": null,
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:security-group/sg-090d0b774a242e731",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090d0b774a242e731",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b299cccfdea730f"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b299cccfdea730f"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b299cccfdea730f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b299cccfdea730f"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b299cccfdea730f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b299cccfdea730f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "myapp-eks-cluster-node-20230723152705174800000009",
            "name_prefix": "myapp-eks-cluster-node-",
            "owner_id": "815919245801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-node",
              "environment": "WidBot-task",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-node",
              "environment": "WidBot-task",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-318035048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b299cccfdea730f",
            "security_group_rule_id": "sgr-01ecec1f670c983c9",
            "self": false,
            "source_security_group_id": "sg-090d0b774a242e731",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-513783409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0ae3410d3a77c3864",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-397316850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-001ed83ed373f01d2",
            "self": false,
            "source_security_group_id": "sg-04b299cccfdea730f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1468283478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0c993a45053fe638c",
            "self": false,
            "source_security_group_id": "sg-04b299cccfdea730f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1631167036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-08f2d4464a0030665",
            "self": false,
            "source_security_group_id": "sg-04b299cccfdea730f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1919262237",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0c15ce70d03bb0cbf",
            "self": false,
            "source_security_group_id": "sg-04b299cccfdea730f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-381988310",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0a3562256549a1977",
            "self": false,
            "source_security_group_id": "sg-04b299cccfdea730f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1804550406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0718e0a67c4126711",
            "self": false,
            "source_security_group_id": "sg-04b299cccfdea730f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1051824565",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0b6560e4f08684dd3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1351583463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-0074c5cea7d8f1cbe",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-187685624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-090d0b774a242e731",
            "security_group_rule_id": "sgr-09df09cd4a2892644",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.EKS.module.eks.aws_security_group.cluster",
            "module.EKS.module.eks.aws_security_group.node",
            "module.VPC.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:network-acl/acl-0415ee412c8536553",
            "default_network_acl_id": "acl-0415ee412c8536553",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0415ee412c8536553",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "815919245801",
            "subnet_ids": [
              "subnet-083c4dc9dc7a8fe37",
              "subnet-09f481bdc5cf891f8",
              "subnet-0e5eb87c33b222cfd",
              "subnet-0f60c01400428119d"
            ],
            "tags": {
              "Name": "WideBot-vpc-task-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:route-table/rtb-02244b9bb522582ab",
            "default_route_table_id": "rtb-02244b9bb522582ab",
            "id": "rtb-02244b9bb522582ab",
            "owner_id": "815919245801",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "WideBot-vpc-task-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:security-group/sg-08c5fd51da412ef02",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08c5fd51da412ef02",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "815919245801",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WideBot-vpc-task-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e92a8c622b8feab7",
            "association_id": "eipassoc-010e84e3c4eca0d8b",
            "domain": "vpc",
            "id": "eipalloc-0e92a8c622b8feab7",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0f493c39c9b20a0b2",
            "private_dns": "ip-10-0-3-39.eu-west-2.compute.internal",
            "private_ip": "10.0.3.39",
            "public_dns": "ec2-52-56-247-144.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.247.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "WideBot-vpc-task-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:internet-gateway/igw-0f214ba17870e9c1e",
            "id": "igw-0f214ba17870e9c1e",
            "owner_id": "815919245801",
            "tags": {
              "Name": "WideBot-vpc-task",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e92a8c622b8feab7",
            "association_id": "eipassoc-010e84e3c4eca0d8b",
            "connectivity_type": "public",
            "id": "nat-0e8e09b4f52b0daba",
            "network_interface_id": "eni-0f493c39c9b20a0b2",
            "private_ip": "10.0.3.39",
            "public_ip": "52.56.247.144",
            "subnet_id": "subnet-0f60c01400428119d",
            "tags": {
              "Name": "WideBot-vpc-task-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_eip.nat",
            "module.VPC.module.vpc.aws_internet_gateway.this",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00bdf34e0a57609d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e8e09b4f52b0daba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00bdf34e0a57609d2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_eip.nat",
            "module.VPC.module.vpc.aws_internet_gateway.this",
            "module.VPC.module.vpc.aws_nat_gateway.this",
            "module.VPC.module.vpc.aws_route_table.private",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f214ba17870e9c1e",
            "id": "r-rtb-0832cdea1907475161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0832cdea190747516",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_internet_gateway.this",
            "module.VPC.module.vpc.aws_route_table.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:route-table/rtb-00bdf34e0a57609d2",
            "id": "rtb-00bdf34e0a57609d2",
            "owner_id": "815919245801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8e09b4f52b0daba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WideBot-vpc-task-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:route-table/rtb-0832cdea190747516",
            "id": "rtb-0832cdea190747516",
            "owner_id": "815919245801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f214ba17870e9c1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WideBot-vpc-task-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0387dbe35687ab0ea",
            "route_table_id": "rtb-00bdf34e0a57609d2",
            "subnet_id": "subnet-0e5eb87c33b222cfd"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.private",
            "module.VPC.module.vpc.aws_subnet.private",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbf6865b2f0fe2f0",
            "route_table_id": "rtb-00bdf34e0a57609d2",
            "subnet_id": "subnet-09f481bdc5cf891f8"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.private",
            "module.VPC.module.vpc.aws_subnet.private",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5ac3e5f48075ff4",
            "route_table_id": "rtb-0832cdea190747516",
            "subnet_id": "subnet-0f60c01400428119d"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.public",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058bbbf4aed016249",
            "route_table_id": "rtb-0832cdea190747516",
            "subnet_id": "subnet-083c4dc9dc7a8fe37"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_route_table.public",
            "module.VPC.module.vpc.aws_subnet.public",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-0e5eb87c33b222cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5eb87c33b222cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WideBot-vpc-task-private-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-private-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-09f481bdc5cf891f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f481bdc5cf891f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WideBot-vpc-task-private-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-private-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-0f60c01400428119d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f60c01400428119d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WideBot-vpc-task-public-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-public-eu-west-2a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:subnet/subnet-083c4dc9dc7a8fe37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083c4dc9dc7a8fe37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "815919245801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WideBot-vpc-task-public-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task-public-eu-west-2b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-014405edb9c38152b"
          },
          "dependencies": [
            "module.VPC.data.aws_availability_zones.azs",
            "module.VPC.module.vpc.aws_vpc.this",
            "module.VPC.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.VPC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815919245801:vpc/vpc-014405edb9c38152b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0415ee412c8536553",
            "default_route_table_id": "rtb-02244b9bb522582ab",
            "default_security_group_id": "sg-08c5fd51da412ef02",
            "dhcp_options_id": "dopt-0ecd2b1f6dd641f45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014405edb9c38152b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02244b9bb522582ab",
            "owner_id": "815919245801",
            "tags": {
              "Name": "WideBot-vpc-task",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "WideBot-vpc-task",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}